eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/IT_Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Age_of_equipment__c</fullName>
        <formula>FLOOR((TODAY()- Date_of_purchase__c )/365.2425)</formula>
        <label>Age of equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_purchase__c</fullName>
        <label>Date of purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Blackburn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edgware Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ilford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leicester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Heath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whitechapel</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type_of_equipment__c</fullName>
        <label>Type of equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Cashier printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque Scanner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkjet Printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi function device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scanner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Working__c</fullName>
        <label>Working?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>IT Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ITE{0000}</displayFormat>
        <label>IT Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Equipment</pluralLabel>
    <recordTypes>
        <fullName>Desktop_Laptop</fullName>
        <active>true</active>
        <description>To be used to log all existing and new PCs.</description>
        <label>Desktop/Laptop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Equipment</fullName>
        <active>true</active>
        <description>To be used to log all other IT equipment</description>
        <label>Other Equipment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>